--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,15 @@
-Flask==3.0.3
-Flask-CORS==3.0.10  
+blinker==1.8.2
+click==8.1.7    
+colorama==0.4.6 
+distlib==0.3.8  
+filelock==3.16.1
+Flask==3.0.3    
+Flask-Cors==5.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+platformdirs==4.3.6
 psycopg2-binary==2.9.9
-dotenv
-Response
-jsonify==0.5
-pandas==2.2.3
+python-dotenv==1.0.1
+virtualenv==20.26.6
+Werkzeug==3.0.4
